set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(form form.cpp form.hpp)
add_library(main-form main-form.cpp main-form.hpp)
add_library(input input.cpp input.hpp)
add_library(read-form read-form.cpp read-form.hpp)
add_library(copy-form copy-form.cpp copy-form.hpp)
add_library(merge-form merge-form.cpp merge-form.hpp)
add_library(list-form list-form.cpp list-form.hpp)
add_library(delete-form delete-form.cpp delete-form.hpp)
target_link_libraries(main-form form input read-form copy-form merge-form list-form delete-form)
target_link_libraries(read-form form input)
target_link_libraries(copy-form form input)
target_link_libraries(merge-form form input)
target_link_libraries(list-form form)
target_link_libraries(delete-form form input)
